<resources>
    <string name="app_name">卡拉OK控制器</string>
    <string name="search">搜尋</string>
    <string name="raise">大聲</string>
    <string name="down">小聲</string>
    <string name="next">下一首</string>
    <string name="replay">重播</string>
    <string name="stop">暫停</string>
    <string name="open_wifi">開啟wifi</string>
    <string name="close_wifi">關閉wifi</string>
    <string name="discover">搜尋附近device</string>
    <string name="status">連線狀態</string>
    <string name="title">卡拉ok投影機 \n遙控器</string>
    <string name="start_discover">開始搜尋...</string>
    <string name="fail_discover">搜尋失敗...</string>
    <string name="all_song">所有歌曲</string>
    <string name="chinese_song">中文歌曲</string>
    <string name="english_song">英文歌曲</string>
    <string name="rank">排行榜</string>
    <string name="chinese_rank">中文總排</string>
    <string name="english_rank">西洋總排</string>
    <string name="chinese_new">中文新歌</string>
    <string name="english_new">西洋新歌</string>
    <string name="personal_info">其他功能</string>
    <string name="favorite">我的最愛</string>
    <string name="history">點播紀錄</string>
    <string name="controller">遙控器</string>
    <string name="title_activity_connected_page">Connected_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">點首歌吧</string>
    <string name="cancel">刪除</string>
    <string name="add_favorite">加到最愛</string>
</resources>
